@startuml
title SmartDress - Class Diagram

left to right direction
skinparam classAttributeIconSize 0

enum CategorieVetement {
    HAUTS
    BAS
    CHAUSSURES
    ACCESSOIRES
}

enum Saison {
    HIVER
    PRINTEMPS
    ETE
    AUTOMNE
}

class Member {
    +Integer id
    +String nom
    +String email
    +String motDePasse
    +String initiales
    +isActive
    +DateTime created_at
    +DateTime updated_at
}

class Role {
    +Integer id
    +String nom
    +String guard_name
    +DateTime created_at
    +DateTime updated_at
}

class Permission {
    +Integer id
    +String nom
    +String guard_name
    +DateTime created_at
    +DateTime updated_at
}

class Vetement {
    +Integer id
    +String nom
    +String couleur
    +Boolean is_Favori
    +DateTime created_at
    +DateTime updated_at
}

class Photo {
    +Integer id
    +String url
    +DateTime created_at
    +DateTime updated_at
}

class Tenue {
    +Integer id
    +String nom
    +DateTime created_at
    +DateTime updated_at
}

class Planning {
    +Integer id
    +Date datePlanifiee
    +DateTime created_at
    +DateTime updated_at
}

Member "*" -- "*" Role : possède
Role "*" -- "*" Permission : accorde


Vetement "1" -- "0..*" Photo : contient

Member "1" -- "0..*" Tenue : crée
Tenue "1" *-- "1..*" Vetement : composée_de

Member "1" -- "0..*" Planning : planifie
Planning "1" -- "0..*" Tenue : programme

Vetement ..> CategorieVetement : utilise
Vetement ..> Saison
@enduml